manifests/cluster-addons/kagent/templates/mcps/fs-mcp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: fs-mcp
  namespace: kagent
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: fs-mcp

  enableDefaultDeny:
    ingress: true
    egress: true

  ingress:
    - fromEndpoints:
        - matchLabels:
            app.kubernetes.io/name: kagent
            app.kubernetes.io/component: controller
        - matchLabels:
            app.kubernetes.io/managed-by: kagent
            app.kubernetes.io/name: homelab
      toPorts:
        - ports:
            - port: '3000'
              protocol: TCP

  egress: []
